Fix styling where project cards were too short

--- a/src/components/Projects/ProjectList/index.module.css
+++ b/src/components/Projects/ProjectList/index.module.css
@@ -38,7 +38,7 @@
   margin: 0;
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
   grid-template-rows: auto;
   width: 100%;
   place-items: center;
